--- a/buscar.html
+++ b/buscar.html
@@ -77,9 +77,9 @@
                                 <td>{{data.telefono}}</td>
                                 <td><span class="label label-success">Atendido</span></td>
                                 <td align="center" class="text-left">
-                                    <a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Edit"><em class="fa fa-pecil"></em></a>
-                                    <a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Delete"><em class="fa fa-trash"></em></a>
-                                    <a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="print"><em class="fa fa-print"></em></a>
+                                    <a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Editar"><em class="fa fa-pencil"></em></a>
+                                    <a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Eliminar"><em class="fa fa-trash"></em></a>
+                                    <a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Imprimir"><em class="fa fa-print"></em></a>
                                 </td>
                             </tr>
                             <tr data-status="pendiente">
@@ -94,9 +94,9 @@
                                     <td>{{data.telefono}}</td>
                                     <td><span class="label label-warning">Pendiende</span></td>
                                     <td align="center" class="text-left">
-                                        <a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Edit"><em class="fa fa-pecil"></em></a>
-                                        <a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Delete"><em class="fa fa-trash"></em></a>
-                                        <a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="print"><em class="fa fa-print"></em></a>
+                                        <a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Editar"><em class="fa fa-pencil"></em></a>
+                                        <a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Eliminar"><em class="fa fa-trash"></em></a>
+                                        <a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Imprimir"><em class="fa fa-print"></em></a>
                                     </td>
                             </tr>
                             <tr data-status="citado">
@@ -111,9 +111,9 @@
                                     <td>{{data.telefono}}</td>
                                     <td><span class="label label-danger">Citado</span></td>
                                     <td align="center" class="text-left">
-                                        <a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Edit"><em class="fa fa-pecil"></em></a>
-                                        <a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Delete"><em class="fa fa-trash"></em></a>
-                                        <a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="print"><em class="fa fa-print"></em></a>
+                                        <a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Editar"><em class="fa fa-pencil"></em></a>
+                                        <a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Eliminar"><em class="fa fa-trash"></em></a>
+                                        <a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Imprimir"><em class="fa fa-print"></em></a>
                                     </td>
                             </tr>
                             <tr data-status="canalizado">
@@ -128,9 +128,9 @@
                                     <td>{{data.telefono}}</td>
                                     <td><span class="label label-default">Canalizado</span></td>
                                     <td align="center" class="text-left">
-                                        <a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Edit"><em class="fa fa-pecil"></em></a>
-                                        <a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Delete"><em class="fa fa-trash"></em></a>
-                                        <a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="print"><em class="fa fa-print"></em></a>
+                                        <a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Editar"><em class="fa fa-pencil"></em></a>
+                                        <a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Eliminar"><em class="fa fa-trash"></em></a>
+                                        <a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Imprimir"><em class="fa fa-print"></em></a>
                                     </td>
                             </tr>
                             <tr data-status="todos">
@@ -145,14 +145,12 @@
                                     <td>{{data.telefono}}</td>
                                     <td><span class="label label-info">Todos</span></td>
                                     <td align="center" class="text-left">
-                                        <a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Edit"><em class="fa fa-pecil"></em></a>
-                                        <a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Delete"><em class="fa fa-trash"></em></a>
-                                        <a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="print"><em class="fa fa-print"></em></a>
+                                        <a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Editar"><em class="fa fa-pencil"></em></a>
+                                        <a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Eliminar"><em class="fa fa-trash"></em></a>
+                                        <a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Imprimir"><em class="fa fa-print"></em></a>
                                     </td>
                             </tr>
-
                         </tbody>
-
                     </table>
                 </div>
             </div>
