--- a/buscar.html
+++ b/buscar.html
@@ -40,7 +40,7 @@
                 <br>
                 <br> -->
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-14">
                 <div class="panel-body">
                     <table id="mitabla" class="table table-bordered table-striped table-list">
                         <!-- <table class="table table-bordered table-hover table-sortable" id="tab-logic">-->
@@ -77,9 +77,9 @@
                                 <td>{{data.telefono}}</td>
                                 <td><span class="label label-success">Atendido</span></td>
                                 <td align="center" class="text-left">
-                                    <a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Editar"><em class="fa fa-pencil"></em></a>
-                                    <a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Eliminar"><em class="fa fa-trash"></em></a>
-                                    <a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Imprimir"><em class="fa fa-print"></em></a>
+                                    <a class="btn btn-default btn-xs" data-toggle="tooltip" data-placement="top" title="Editar"><i class="glyphicon glyphicon-pencil"></i></a>
+                                    <a class="btn btn-default btn-xs" data-toggle="tooltip" data-placement="top" title="Eliminar"><i class="glyphicon glyphicon-trash"></i></a>
+                                    <a class="btn btn-default btn-xs" data-toggle="tooltip" data-placement="top" title="Imprimir"><i class="glyphicon glyphicon-print"></i></a>
                                 </td>
                             </tr>
                             <tr data-status="pendiente">
@@ -94,9 +94,9 @@
                                     <td>{{data.telefono}}</td>
                                     <td><span class="label label-warning">Pendiende</span></td>
                                     <td align="center" class="text-left">
-                                        <a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Editar"><em class="fa fa-pencil"></em></a>
-                                        <a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Eliminar"><em class="fa fa-trash"></em></a>
-                                        <a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Imprimir"><em class="fa fa-print"></em></a>
+                                        <a class="btn btn-default btn-xs" data-toggle="tooltip" data-placement="top" title="Editar"><i class="glyphicon glyphicon-pencil"></i></a>
+                                        <a class="btn btn-default btn-xs" data-toggle="tooltip" data-placement="top" title="Eliminar"><i class="glyphicon glyphicon-trash"></i></a>
+                                        <a class="btn btn-default btn-xs" data-toggle="tooltip" data-placement="top" title="Imprimir"><i class="glyphicon glyphicon-print"></i></a>
                                     </td>
                             </tr>
                             <tr data-status="citado">
@@ -111,9 +111,9 @@
                                     <td>{{data.telefono}}</td>
                                     <td><span class="label label-danger">Citado</span></td>
                                     <td align="center" class="text-left">
-                                        <a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Editar"><em class="fa fa-pencil"></em></a>
-                                        <a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Eliminar"><em class="fa fa-trash"></em></a>
-                                        <a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Imprimir"><em class="fa fa-print"></em></a>
+                                        <a class="btn btn-default btn-xs" data-toggle="tooltip" data-placement="top" title="Editar"><i class="glyphicon glyphicon-pencil"></i></a>
+                                        <a class="btn btn-default btn-xs" data-toggle="tooltip" data-placement="top" title="Eliminar"><i class="glyphicon glyphicon-trash"></i></a>
+                                        <a class="btn btn-default btn-xs" data-toggle="tooltip" data-placement="top" title="Imprimir"><i class="glyphicon glyphicon-print"></i></a>
                                     </td>
                             </tr>
                             <tr data-status="canalizado">
@@ -128,9 +128,9 @@
                                     <td>{{data.telefono}}</td>
                                     <td><span class="label label-default">Canalizado</span></td>
                                     <td align="center" class="text-left">
-                                        <a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Editar"><em class="fa fa-pencil"></em></a>
-                                        <a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Eliminar"><em class="fa fa-trash"></em></a>
-                                        <a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Imprimir"><em class="fa fa-print"></em></a>
+                                        <a class="btn btn-default btn-xs" data-toggle="tooltip" data-placement="top" title="Editar"><i class="glyphicon glyphicon-pencil"></i></a>
+                                        <a class="btn btn-default btn-xs" data-toggle="tooltip" data-placement="top" title="Eliminar"><i class="glyphicon glyphicon-trash"></i></a>
+                                        <a class="btn btn-default btn-xs" data-toggle="tooltip" data-placement="top" title="Imprimir"><i class="glyphicon glyphicon-print"></i></a>
                                     </td>
                             </tr>
                             <tr data-status="todos">
@@ -145,9 +145,9 @@
                                     <td>{{data.telefono}}</td>
                                     <td><span class="label label-info">Todos</span></td>
                                     <td align="center" class="text-left">
-                                        <a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Editar"><em class="fa fa-pencil"></em></a>
-                                        <a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Eliminar"><em class="fa fa-trash"></em></a>
-                                        <a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Imprimir"><em class="fa fa-print"></em></a>
+                                        <a class="btn btn-default btn-xs" data-toggle="tooltip" data-placement="top" title="Editar"><i class="glyphicon glyphicon-pencil"></i></a>
+                                        <a class="btn btn-default btn-xs" data-toggle="tooltip" data-placement="top" title="Eliminar"><i class="glyphicon glyphicon-trash"></i></a>
+                                        <a class="btn btn-default btn-xs" data-toggle="tooltip" data-placement="top" title="Imprimir"><i class="glyphicon glyphicon-print"></i></a>
                                     </td>
                             </tr>
                         </tbody>
